--- a/⚂/index.css
+++ b/⚂/index.css
@@ -20,7 +20,7 @@ body {
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
 }
 
@@ -28,11 +28,15 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background: rgba(255,255,255,0.8);
-	border: 2px dashed grey;
+	background: rgb(78, 38, 14);
+	border: 0.4mm dashed #e6a280;
 	border-radius: 1ch;
 	padding: 2ch;
 	margin-top: 2em;
+	color: #d9beae;
+	box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.5);
+	font: script;
+	font-family: cursive;
 }
 
 a {
@@ -41,6 +45,7 @@ a {
 
 h1 {
 	margin: 0 0 0.3ch 0;
+	font-weight: bold;
 }
 
 form {
@@ -104,8 +109,7 @@ output {
 	display: flex;
 	justify-content: space-between;
 	background: rgba(255,255,255,0.2);
-	border: 0px ridge grey;
-	border-top-width: 2px;
+	border-top: 1px solid rgba(0,0,0,0.6);
 }
 
 #status > * {
