--- a/css/blog.less
+++ b/css/blog.less
@@ -40,9 +40,13 @@
 		margin-right: 2px;
 		margin-left: 2px;
 	}
-
+	
 	> p {
 		text-indent: 2em;
+	}
+	
+	> p.noindent {
+		text-indent: 0;
 	}
 	
 	iframe {
@@ -98,7 +102,7 @@
 	}
 	
 	.code-container {
-		overflow-x: scroll;
+		overflow-x: auto;
 		white-space: pre-line;
 	}
 }
