--- a/css/grey-and-blue.less
+++ b/css/grey-and-blue.less
@@ -51,6 +51,9 @@ body {
 	max-width: 850px;
 	margin: auto;
 	//font-size: large;
+	
+	//Note: This is not related to paragraph indent.
+	tab-size: 4; //Defaults to 8, which I find a bit wide for the blog code blocks.
 }
 
 @media (max-width: 650px) {
