--- a/css/grey-and-blue.css
+++ b/css/grey-and-blue.css
@@ -85,6 +85,11 @@ h1 img {
 p {
   font-family: sans-serif;
 }
+code.prism-block {
+  overflow: auto;
+  display: block;
+  letter-spacing: -0.01rem;
+}
 #icon-bar a {
   color: lightgrey;
   text-decoration: none;
