--- a/css/grey-and-blue.less
+++ b/css/grey-and-blue.less
@@ -136,6 +136,12 @@ p {
 	font-family: sans-serif;
 }
 
+code.prism-block {
+	overflow: auto;
+	display: block;
+	letter-spacing: -0.01rem; //Fit 80 columns of text on screen.
+}
+
 #icon-bar a {
 	color: @cIconGrey;
 	text-decoration: none;
