--- a/css/grey-and-blue.less
+++ b/css/grey-and-blue.less
@@ -96,7 +96,7 @@ body {
 #content-pane {
 	margin: 0px;
 	padding: 3em;
-	padding-top: 3em;
+	padding: clamp(1em, 10vw, 3em);
 	background: linear-gradient(@cContentTopGrey, @cContentBottomGrey);
 }
 
