--- a/css/grey-and-blue.less
+++ b/css/grey-and-blue.less
@@ -280,3 +280,10 @@ footer {
 	color: @cFooterIntensity;
 	text-shadow: @sInsetText;
 }
+
+
+.tags {
+	font-size: 85%;
+	opacity: 0.8;
+	margin-top: 0.5rem;
+}
