--- a/css/grey-and-blue.less
+++ b/css/grey-and-blue.less
@@ -140,6 +140,9 @@ code.prism-block {
 	overflow: auto;
 	display: block;
 	letter-spacing: -0.01rem; //Fit 80 columns of text on screen.
+	border: 0.5ex solid transparent; //Give it a bit of padding. (Padding is used elswhere, by the prism-okaidia.)
+	border-left-width: 1.2ex; //Visually align first letter roughly square to the corner.
+	border-right-width: 1ex;
 }
 
 #icon-bar a {
