--- a/css/grey-and-blue.less
+++ b/css/grey-and-blue.less
@@ -136,6 +136,12 @@ p {
 	font-family: sans-serif;
 }
 
+p > a > img {
+	//Give linked images on the blog just a little breathing room. Exclude non-linked images, which are usually emojis.
+  margin-top: 2ex;
+  margin-bottom: 3ex;
+}
+
 code.prism-block {
 	overflow: auto;
 	display: block;
